tests/compile_fail/invalid_selector_specificity_struct_literal.rs
use surgeist_style::SelectorSpecificity;

fn main() {
    let _specificity = SelectorSpecificity {
        ids: 0,
        classes: 1,
        elements: 0,
    };
}
