tests/compile_fail/invalid_selector_specificity_struct_literal.stderr
error[E0451]: fields `ids`, `classes` and `elements` of struct `SelectorSpecificity` are private
 --> tests/compile_fail/invalid_selector_specificity_struct_literal.rs:5:9
  |
4 |     let _specificity = SelectorSpecificity {
  |                        ------------------- in this type
5 |         ids: 0,
  |         ^^^ private field
6 |         classes: 1,
  |         ^^^^^^^ private field
7 |         elements: 0,
  |         ^^^^^^^^ private field
